refactor (GymMemberServiceImpl): add logger messages and fix create member dto mapping problem